  * New upstream release.
  * Update debian/watch for the new upstream tarball names.
  * Remove items from Files-Excluded which are no longer in the tarball.
  * Refresh other patches.
  * Bump Qt build-dependencies to 5.10.1.
  * Update symbols files from the current build log.
  * Stop using WEBENGINE_CONFIG, it has been removed in 5.10.
  * Remove undefined linux_link_libpci option.

  [ Alexander Volkov ]
  * Drop system-re2.patch and remove re2 changes from linux-pri.patch.
    System re2 is auto-detected out of the box.
  * Update system-icu-utf.patch to fix linking with icuuc.
  * Update system-nspr-prtime.patch.
  * Update verbose-gn-bootstrap.patch.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 09 Nov 2017 13:46:23 +0300

qtwebengine-opensource-src (5.9.2+dfsg-3) unstable; urgency=medium

  * Backport upstream patch to fix build with ICU 60.
  * Forcefully disable make output synchronization introduced in debhelper
    11.1.5~alpha1. Ninja is a single process, and with synchronized output
    the buildds do not see any activity and think that the build is hung.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 10 Mar 2018 16:01:36 +0300

qtwebengine-opensource-src (5.9.2+dfsg-2) unstable; urgency=medium

  * Update for Qt binaries location change in qtbase 5.9.2+dfsg-3.
    - Install qwebengine_convert_dict tool into the new location.
    - Provide a compatibility symlink for the old location.
    - Bump qtbase5-private-dev and qttools5-dev-tools build-dependencies.
  * Update libqt5webenginecore5.symbols from buildds’ logs.
  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 27 Oct 2017 21:39:36 +0300

qtwebengine-opensource-src (5.9.2+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Remove upstream applied patch: armhf-options.patch
  * Update patch hunks.
  * Update copyright for 5.9.2.
  * Add new Build-Dependency: qtquickcontrols2-5-dev
  * Bump Qt build-dependencies to 5.9.2.