@@ -1,4 +1,4 @@
-Description: use system yasm, run unbundling script
+Description: unbundle yasm using the unbundling script
 Author: Kevin Kofler
 Origin: Fedora, https://src.fedoraproject.org/rpms/qt5-qtwebengine/blob/master/f/qtwebengine-everywhere-src-5.10.0-linux-pri.patch
 Forwarded: not-needed
@@ -8,16 +8,10 @@ Last-Update: 2018-03-10
 This patch header follows DEP-3: http://dep.debian.net/deps/dep3/
 --- a/src/core/config/linux.pri
 +++ b/src/core/config/linux.pri
-@@ -164,3 +164,16 @@ host_build {
+@@ -164,3 +164,10 @@ host_build {
      #qtConfig(webengine-system-jsoncpp): gn_args += use_system_jsoncpp=true
      #qtConfig(webengine-system-libsrtp: gn_args += use_system_libsrtp=true
  }
-+
-+# yasm is only used on x86, and passing use_system_yasm makes the build fail on
-+# other architectures (e.g., ARM), so make it conditional on the architecture
-+contains(QT_ARCH, "x86_64")|contains(QT_ARCH, "i386") {
-+    gn_args += use_system_yasm=true
-+}
 +
 +# run the unbundling script Chromium provides
 +CHROMIUM_SRC_DIR = "$$QTWEBENGINE_ROOT/$$getChromiumSrcDir()"
